--- a/Portfolio.html
+++ b/Portfolio.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css" >
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton%7CEB Garamond%7CCinzel Decorative">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Anton%7CEB Garamond%7CCinzel%20Decorative">
     <title>AntonCV</title>
 </head>
 
@@ -32,8 +32,6 @@
                 <li class = "navbar-link"><a href="Länkar.html">Länkar</a></li>
                
                 
->
-
 
             </ul>
 
